# bh_cmark

./: Cargo.toml  LICENSE  README.md
examples/: example_01.rs
src/: ast.rs  lib.rs  scanner.rs  token.rs  token_type.rs
src/parser/: base.rs  block_detector.rs  code.rs  delimiter.rs  header.rs  image.rs  mod.rs  parser.rs  text.rs
src/render/: html.rs  mod.rs
tests/: Readme.md  test_commonmark_spec.rs  test_delimiter_classify_can_open_close.rs  test_delimiter_map_markdown_to_clean.rs  test_delimiter_match_delimiters.rs  test_delimiter_parse_inline.rs  test_delimiter_pre_process.rs  test_delimiter_produce_spans.rs  test_parser.rs  test_scanner.rs
tests/common/: json_spec.rs  mod.rs  test_constant.rs  test_data_produce_spans_parse_inline.rs
tests/data/: Readme.md
